fixed game horizontal overflow

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -70,7 +70,8 @@ h1 {
   color: rgb(227, 242, 253);
 }
 .game h1 {
-  margin: 0px
+  margin: 0px;
+  width: 100%
 }
 h2 {
   font-size: 40px;
@@ -228,6 +229,6 @@ footer button {
     width: 80px;
   }
   .game h1 {
-    margin: -20px
+    margin: -20px -20px 5px;
   }
 }
